$Id$                       -*-text-*-


**** 1.06 [unreleased]

Fix rt.cpan.org #113020

	Resolve::Recurse Hangs

Fix rt.cpan.org #112860

	improperly terminated AXFR at t/08-IPv4.t line 446.


**** 1.05 March 7, 2016

Fix rt.cpan.org #111559

	1.04: TSIG not working anymore (TSIG.pm)

Fix rt.cpan.org #108908

	Installing recent version gets shadowed by old version.
	Warnings added to Makefile.PL and t/00-version.t.

Fix rt.cpan.org #66900

	Net::DNS::Async unable to retry truncated UDP using TCP because
	of limitations in Net::DNS.


**** 1.04 December 8, 2015

Fix rt.cpan.org #109183

	Semantics of "retry" and "retrans" options has changed with 1.03

Fix rt.cpan.org #109152

	Deprecated method make_query_packet breaks calling code

Fix rt.cpan.org #109135

	Resolver behaves differently with long and short IPv6 address format

Fix rt.cpan.org #108745

	Net::DNS::Resolver bgsend


**** 1.03 November 6, 2015

Fix rt.cpan.org #107897

	t/10-recurse.t freezes, never completes

Fix rt.cpan.org #101978

	Update Net::DNS to use IO::Socket::IP

Fix rt.cpan.org #84375

	Timeout doesn't work with bgsend/bgread

Fix rt.cpan.org #47050

	persistent sockets for Resolver::bg(send|read|isready)

Fix rt.cpan.org #15515

	bgsend on TCP


**** 1.02 September 16, 2015

Fix rt.cpan.org #107052

 	suppress messages: Can't locate Net/DNS/Resolver/linux.pm

Fix rt.cpan.org #106916

	Dependency on MIME::Base32 makes Net::DNS not installable on MSWin32

Fix rt.cpan.org #106565

	Net::DNS::Resolver::Recurse and IPv6 Reverse DNS

Fix rt.cpan.org #105808

	Version test for Pod::Test is broken


**** 1.01 Jul 6, 2015

Feature
	The RRs previously only available with Net::DNS::SEC are now
	integrated with Net::DNS.  Net::DNS::SEC needs to be installed
	to enable the signature generation and verification functions.

Fix rt.cpan.org #105491

	Can't call method "zclass" on an undefined value at ... Net/DNS/Packet.pm line 474

Fix rt.cpan.org #105421

	Dead link in Net::DNS::FAQ
